tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__attribute_complex_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[complex_attribute_macro_v2]\nfn foo() {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[complex_attribute_macro_v2]<caret>
fn <caret>foo() {}
fn foo() {<caret>}
"""
generated_code = """
fn foo() {}
fn generated_function_with_other_attribute_v2() {}
fn generated_function_v2() {}
"""
