tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__attribute_with_location_error_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[error_attribute_with_location_macro_v2]\nfn foo() {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[error_attribute_with_location_macro_v2]<caret>
fn f<caret>oo() {}
fn foo() {<caret>}
"""
generated_code = """
#[error_attribute_with_location_macro_v2]
fn foo() {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: fn
    diagnostic:
      range:
        start:
          line: 1
          character: 0
        end:
          line: 1
          character: 2
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
