tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__attribute_with_mod_v2_with_user_error.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[mod_attribute_macro_v2]\nfn foo() { \"a\" + \"b\"; }"
expression: report
---
[[expansions]]
analyzed_lines = """
#[mod_attribute_macro_v2]<caret>
fn f<caret>oo() { "a" + "b"; }
fn foo() { "a" + "b"; <caret>}
"""
generated_code = """
mod modzik {
    fn foo() {
        "a" + "b";
    }
let x = ; }
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: '#[mod_attribute_macro_v2]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 25
      severity: 1
      code: E1000
      message: |-
        Skipped tokens. Expected: Const/Enum/ExternFunction/ExternType/Function/Impl/InlineMacro/Module/Struct/Trait/TypeAlias/Use or an attribute.
        note: this error originates in the attribute macro: `mod_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_mod_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 35
            end:
              line: 0
              character: 38
        message: Diagnostic mapped from here.
  - related_code: '#[mod_attribute_macro_v2]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 25
      severity: 1
      code: E1000
      message: |-
        Skipped tokens. Expected: Const/Enum/ExternFunction/ExternType/Function/Impl/InlineMacro/Module/Struct/Trait/TypeAlias/Use or an attribute.
        note: this error originates in the attribute macro: `mod_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_mod_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 40
            end:
              line: 0
              character: 42
        message: Diagnostic mapped from here.
  - related_code: '"a" + "b"'
    diagnostic:
      range:
        start:
          line: 1
          character: 11
        end:
          line: 1
          character: 20
      severity: 1
      code: E2314
      message: |-
        Type annotations needed. Failed to infer ?0.
        note: this error originates in the attribute macro: `mod_attribute_macro_v2`
      relatedInformation:
      - location:
          uri: vfs://proc_mod_attribute_macro_v2.cairo
          range:
            start:
              line: 0
              character: 22
            end:
              line: 0
              character: 31
        message: Diagnostic mapped from here.
