tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_complex_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ComplexDeriveMacroV2)]\nstruct EmptyStruct {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ComplexDeriveMacroV2)]
#[derive(Complex<caret>DeriveMacroV2)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ComplexDeriveMacroV2)]
struct EmptyStruct {}
//-----
fn another_generated_function_v2() {}
fn generated_function_v2() {}
//-----
trait MyTraitV2<T> {
    fn bar(t: T);
}
//-----
impl MyTraitImpl of MyTraitV2<felt252> {
    fn bar(t: felt252) {}
}
"""
