tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_simple_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(SimpleDeriveMacroV2)]\nstruct EmptyStruct {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(SimpleDeriveMacroV2)]
#[derive(Simple<caret>DeriveMacroV2)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(SimpleDeriveMacroV2)]
struct EmptyStruct {}
//-----
trait MyTrait<T> {
    fn foo(t: T);
}
//-----
impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
"""
