tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__derive_with_error_v2_with_user_error.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[derive(ErrorDeriveMacroV2)]\nstruct EmptyStruct { a: b, }"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ErrorDeriveMacroV2)]
#[derive(Error<caret>DeriveMacroV2)]
struct Empty<caret>Struct { a: b, }
struct EmptyStruct { a: b, <caret>}
"""
generated_code = """
#[derive(ErrorDeriveMacroV2)]
struct EmptyStruct {
    a: b,
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: ErrorDeriveMacroV2
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 27
      severity: 1
      code: E2200
      message: 'Plugin diagnostic: Error from procedural macro'
  - related_code: b
    diagnostic:
      range:
        start:
          line: 1
          character: 24
        end:
          line: 1
          character: 25
      severity: 1
      code: E0006
      message: Type not found.
